// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Footer component Footer 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flexDirection": "row",
      "height": 60,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 10,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#005be1",
          "fontSize": 14,
          "textAlign": "center",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#005be1",
            "fontSize": 20,
          },
          undefined,
          Object {
            "fontFamily": "FontAwesome",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Storyshots Header component Header 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "borderBottomWidth": 1,
      "borderColor": "#d8d8d8",
      "flexDirection": "row",
      "height": 60,
      "justifyContent": "center",
      "position": "absolute",
      "width": "100%",
      "zIndex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 10,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#005be1",
          "fontSize": 18,
          "textAlign": "center",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 10,
      }
    }
  />
</View>
`;

exports[`Storyshots Header component Header hasBack 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "borderBottomWidth": 1,
      "borderColor": "#d8d8d8",
      "flexDirection": "row",
      "height": 60,
      "justifyContent": "center",
      "position": "absolute",
      "width": "100%",
      "zIndex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#005be1",
              "fontSize": 20,
            },
            undefined,
            Object {
              "fontFamily": "FontAwesome",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#005be1",
          "fontSize": 18,
          "textAlign": "center",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 10,
      }
    }
  />
</View>
`;

exports[`Storyshots Header component Header with action 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "borderBottomWidth": 1,
      "borderColor": "#d8d8d8",
      "flexDirection": "row",
      "height": 60,
      "justifyContent": "center",
      "position": "absolute",
      "width": "100%",
      "zIndex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 10,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#005be1",
          "fontSize": 18,
          "textAlign": "center",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 10,
      }
    }
  />
</View>
`;

exports[`Storyshots TextField primitive TextField 1`] = `
<View
  style={
    Object {
      "padding": 50,
      "width": 400,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "borderBottomWidth": 1,
          "borderColor": "black",
          "width": "100%",
        },
        Object {},
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "transparent",
            "fontFamily": "Avenir-Book",
            "fontSize": 12,
          },
          Object {},
        ]
      }
    >
      Email
    </Text>
    <TextInput
      allowFontScaling={true}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Email"
      placeholderTextColor="grey"
      style={
        Array [
          Object {
            "color": "black",
            "fontFamily": "Avenir-Book",
            "fontSize": 14,
            "marginBottom": 5,
            "marginTop": 5,
            "paddingLeft": 0,
            "width": "100%",
          },
          undefined,
        ]
      }
      title=""
      underlineColorAndroid="transparent"
    />
  </View>
</View>
`;
